increased width of image and modified all the document files

--- a/student portal website/portal.html
+++ b/student portal website/portal.html
@@ -24,7 +24,7 @@
         <!-- <i id="firstfont" class="fa-solid fa-circle-chevron-left fa-2x"></i>
         
         <i id="secondfont" class="fa-solid fa-circle-chevron-right fa-2x"></i> -->
-        <img class="cube"  src="home-cover.jpg" alt="library" width="1430px" height="580px" >
+        <img class="cube"  src="home-cover.jpg" alt="library" width="100%" height="580px" >
         <!-- <button class="readmore">Read More</button> -->
         <a href="" class="allCourses-btn">All COURSES</a>
         
